update webhook url

--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -1,6 +1,6 @@
 #!KAMAILIO
 
-#!define WEBHOOK_URL "https://your-worker.your-subdomain.workers.dev/clinic-lookup"
+#!define WEBHOOK_URL "https://4650-95-75-247-129.ngrok-free.app/clinic-lookup"
 #!define DEFAULT_CLINIC_ID "LOCAL_TEST_ID"
 #!define DEFAULT_CLINIC_NAME "LOCAL_TEST"
 
