feat(config): add logging for request routing and webhook interactions
Added detailed xlog statements to kamailio.cfg to improve observability during the SIP request lifecycle. These logs capture incoming request details, webhook request/response payloads, and final relay destinations, facilitating easier debugging of clinic enrichment logic.

--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -21,6 +21,8 @@ loadmodule "http_client.so"
 loadmodule "jansson.so"
 
 request_route {
+    xlog("L_INFO", "REQ method=$rm src=$si:$sp ruri=$ru callid=$ci\n");
+
     if (is_method("OPTIONS")) {
         sl_send_reply("200", "OK");
         exit;
@@ -39,6 +41,7 @@ request_route {
     route(CLINIC_ENRICH);
 
     $ru = "sip:sip.rtc.elevenlabs.io:5060;transport=tcp";
+    xlog("L_INFO", "RELAY callid=$ci clinic_id=$var(clinic_id) clinic_name=$var(clinic_name) dst=$ru\n");
 
     if(!t_relay()) {
         sl_send_reply("500","Relay Failed");
@@ -56,9 +59,11 @@ route[CLINIC_ENRICH] {
     jansson_set("string", "call_id", "$ci", "$var(payload)");
     jansson_set("string", "from_user", "$fU", "$var(payload)");
     jansson_set("string", "to_user", "$rU", "$var(payload)");
+    xlog("L_INFO", "WEBHOOK_REQUEST callid=$ci payload=$var(payload)\n");
 
     $var(webhook_body) = "";
     $var(http_rc) = http_client_query(WEBHOOK_URL, "$var(payload)", "Content-Type: application/json", "$var(webhook_body)");
+    xlog("L_INFO", "WEBHOOK_RESPONSE callid=$ci http=$var(http_rc) body=$var(webhook_body)\n");
 
     if ($var(http_rc) >= 200 && $var(http_rc) < 300 && $var(webhook_body) != "") {
         $var(api_clinic_id) = "";
