feat(cfg): load xlog module for request logging
Loaded the xlog.so module to enable the use of the xlog() function in the configuration script. This allows for logging incoming request metadata such as method, source address, and Call-ID for debugging and monitoring purposes.

--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -19,6 +19,7 @@ loadmodule "pv.so"
 loadmodule "tls.so"
 loadmodule "http_client.so"
 loadmodule "jansson.so"
+loadmodule "xlog.so"
 
 request_route {
     xlog("L_INFO", "REQ method=$rm src=$si:$sp ruri=$ru callid=$ci\n");
