feat(cfg): add X-CALL-ID and X-CALLER-ID headers for relay
Add custom SIP headers to outgoing requests before relaying to the ElevenLabs SIP gateway. These headers include the Call-ID ($ci) and the Caller ID ($fU) to ensure the destination server has access to the original call metadata for tracking or identification purposes.

--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -42,6 +42,8 @@ request_route {
     route(CLINIC_ENRICH);
 
     $ru = "sip:sip.rtc.elevenlabs.io:5060;transport=tcp";
+    append_hf("X-CALL-ID: $ci\r\n");
+    append_hf("X-CALLER-ID: $fU\r\n");
     xlog("L_INFO", "RELAY callid=$ci clinic_id=$var(clinic_id) clinic_name=$var(clinic_name) dst=$ru\n");
 
     if(!t_relay()) {
