--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -40,7 +40,7 @@ request_route {
         exit;
     }
 
-    route(CLINIC_ENRICH);
+    # route(CLINIC_ENRICH);
 
     $ru = UPSTREAM_URI;
     append_hf("X-CALL-ID: $ci\r\n");
