feat(logging): add SIP reply logging and simplify relay logs
This change improves visibility into the SIP transaction lifecycle by:
- Adding a new onreply_route[REPLY_LOG] to log SIP response codes, reasons, and source information.
- Enabling the reply route via t_on_reply in the main request route.
- Removing clinic-specific variables from the RELAY log message to keep it focused on the routing destination.

--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -45,12 +45,18 @@ request_route {
     $ru = UPSTREAM_URI;
     append_hf("X-CALL-ID: $ci\r\n");
     append_hf("X-CALLER-ID: $fU\r\n");
-    xlog("L_INFO", "RELAY callid=$ci clinic_id=$var(clinic_id) clinic_name=$var(clinic_name) dst=$ru\n");
+    xlog("L_INFO", "RELAY callid=$ci dst=$ru\n");
+
+    t_on_reply("REPLY_LOG");
 
     if(!t_relay()) {
         sl_send_reply("500","Relay Failed");
     }
     exit;
+}
+
+onreply_route[REPLY_LOG] {
+    xlog("L_INFO", "REPLY code=$rs reason=$rr callid=$ci src=$si:$sp\n");
 }
 
 route[CLINIC_ENRICH] {
